# CBaaS

./: .ghci  .gitignore  .gitmodules  CBaaS.cabal  LICENSE  README.md  cabal.project  init-sandbox.sh  test2.hs
app/: frontend-rebuild.sh  server-rebuild.sh
app/snaplets/heist/templates/: function.tpl
app/static/media/css/: frontend.css
cbaas-frontend/: Frontend.cabal  bak-def.nix  cbaas-frontend.cabal  ghc.nix  toSite.sh  tr.nix  tr2.nix
cbaas-frontend/exec/: Frontend.hs
cbaas-frontend/src/Frontend/: Canvas.hs  Expression.hs  Function.hs  ImageWidget.hs  SimpleWidgets.hs  Utils.hs  WebcamWidget.hs
cbaas-lib/: cbaas-lib.cabal  cbass-lib.cabal  default.nix  ghc-overrides.nix  ghcjs-overrides.nix  shell.sh
cbaas-lib/src/: API.hs  APIDocs.hs  BrowserProfile.hs  EntityID.hs  Eval.hs  Job.hs  Kind.hs  Message.hs  Model.hs  Parse.hs  Permissions.hs  Pretty.hs  RemoteFunction.hs  Semantics.hs  Server.hs  Tag.hs  Type.hs  TypeCheck.hs  User.hs  Utils.hs  Worker.hs  WorkerClient.hs  WorkerProfile.hs
cbaas-lib/src/ClientGen/: JS.hs  Matlab.hs
cbaas-lib/test/: MessageSpec.hs
cbaas-server/: cbaas-server.cabal  default.nix  sample.devel.cfg  tr.nix
cbaas-server/exec/: PixAvg.hs
cbaas-server/exec/Server/: APIServer.hs  Application.hs  Crud.hs  GroundhogAuth.hs  Site.hs  Utils.hs  WebSocketServer.hs
cbaas-server/snaplets/heist/templates/: _base.tpl  _job_requester.tpl  function.tpl
cbaas-server/sql/: create.sql  init.sh
cbaas-server/src/: Browser.hs  Worker.hs  WorkerClient.hs
cbaas-server/static/js/: job_requester.js  list_workers.js  testworker.js
democlients/: LICENSES  caffe-imagenet.py  deepdream.py
exec/: PixAvg.hs  ServerMain.hs  server.hs
exec/Server/: APIServer.hs  Site.hs  WebSocketServer.hs
snaplets/heist/templates/: _base.tpl  _job_requester.tpl  index.tpl  testworker.tpl
src/: API.hs  APIDocs.hs  Browser.hs  Combo.hs  EntityID.hs  Job.hs  Message.hs  Model.hs  Permissions.hs  RemoteFunction.hs  Semantics.hs  Tag.hs  Types.hs  User.hs  WebSocketServer.hs  Worker.hs  WorkerClient.hs
src/ClientGen/: JS.hs  Matlab.hs
src/Server/: APIServer.hs  Application.hs  Crud.hs  Site.hs
static/js/: job_requester.js  list_workers.js  testworker.js
test/: ModelSpec.hs
workerlib/: cbaas.py
workerlib/python/cbaas-0.1/: cbaas.py  setup.py
workerlib/python/cbaas-0.1/cbaas/: __init__.py  core.py  matlab.py
