name:                CBaaS
version:             0.1.0.0
synopsis:            Center for Brains Minds and Machines as a Service
-- description:         
homepage:            http://github.com/CBMM/CBaaS
license:             BSD3
license-file:        LICENSE
author:              Greg Hale
maintainer:          imalsogreg@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

library
  build-depends:       base >=4.8 && <4.9
                     , aeson >= 0.9 && < 0.11
                     , bytestring >=0.10 && <0.11
                     , containers >=0.5 && <0.6
                     , deepseq >=1.4 && <1.5
                     , directory >=1.2 && <1.3
                     , filepath >=1.4 && <1.5
                     , heist >= 1.0 && < 1.1
                     , lens >= 4.12 && < 4.13
                     , map-syntax
                     , process >=1.2 && <1.3
                     , servant >= 0.5
                     , servant-server >= 0.5 && < 0.6
                     , snap >= 1.0 && < 1.1
                     , snap-core >= 1.0 && < 1.1
                     , transformers >=0.4 && <0.5
                     , text >=1.2 && < 1.3
                     , time >=1.5 && <1.6
                     , unix >=2.7 && <2.8
                     , uuid >= 1.3.11 && < 1.4
  hs-source-dirs:      src
  exposed-modules:     API
                       Types
                       Server.Application
                       Server.Site
  build-tools:         hsc2hs
  default-language:    Haskell2010

executable server
 build-depends:       base >= 4.8 && < 4.9
                    , bytestring
                    , CBaaS
                    , containers
                    , deepseq
                    , directory
                    , filepath
                    , process
                    , servant >= 0.5
                    , servant-server >= 0.5 && < 0.6
                    , snap >= 1.0
                    , snap-core
                    , snap-loader-dynamic >= 1.0 && < 1.1
                    , snap-loader-static  >= 1.0 && < 1.1
                    , snap-loader-static
                    , snap-server >= 1.0
                    , transformers
                    , text
                    , time
                    , unix
 hs-source-dirs:    exec
 main-is:           ServerMain.hs
 default-language:  Haskell2010
