name:                cbaas-lib
version:             0.1.0.0
synopsis:            Center for Brains Minds and Machines as a Service
-- description:         
homepage:            http://github.com/CBMM/CBaaS
license:             BSD3
license-file:        LICENSE
author:              Greg Hale
maintainer:          imalsogreg@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

library
  build-depends:       base >=4.8 && <4.9
                     , aeson >= 0.9 && < 0.11
                     , async
                     , base64-bytestring
                     , basic-sop >= 0.2 && < 0.3
                     , bytestring >=0.10 && <0.11
                     , configurator
                     , containers >=0.5 && <0.6
                     , deepseq >=1.4 && <1.5
                     , directory >=1.2 && <1.3
                     , filepath >=1.4 && <1.5
                     , free >= 4.12 && < 4.13
                     , generics-sop >= 0.2 && < 0.3
                     , groundhog >= 0.7.0.3 && < 0.8
                     , groundhog-th
                     , http-api-data >= 0.2 && < 0.3
                     , JuicyPixels >= 3.2.7 && < 3.8
                     , lens >= 4.8 && < 4.14
                     , map-syntax
                     , monad-control
                     , optparse-applicative
                     , process >=1.2 && <1.3
                     , servant >= 0.5
                     , servant-docs >= 0.5
                     , servant-js >= 0.5 && < 0.6
                     , servant-matlab
                     , mtl >= 2.2.1 && < 2.3
                     , resource-pool
                     , stm
                     , transformers >=0.4 && <0.5
                     , transformers-base
                     , text >=1.2 && < 1.3
                     , time >=1.5 && <1.6
                     , unagi-chan
                     , unix >=2.7 && <2.8
                     , unordered-containers >= 0.2.5.1 && < 0.3
                     , uri-bytestring
                     -- , urlencoded
                     , uuid-types
                     , vector
  hs-source-dirs:      src
  exposed-modules:     API
                       APIDocs
                       BrowserProfile
                       ClientGen.JS
                       ClientGen.Matlab
--                       Combo
                       EntityID
                       Job
                       Message
                       Model
                       Permissions
                       RemoteFunction
                       Semantics
                       Tag
                       User
                       Utils
                       WorkerProfile
  build-tools:         hsc2hs
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options: -Wall -threaded
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: base == 4.*, 
                 aeson,
                 basic-sop >= 0.2 && < 0.3,
                 cbaas-lib,
                 generics-sop,
                 hspec >= 2.2 && < 2.3, 
                 JuicyPixels,
                 QuickCheck >= 2.8 && < 2.9,
                 text,
                 unordered-containers,
                 vector
