name:                cbaas-lib
version:             0.1.0.0
synopsis:            Center for Brains Minds and Machines as a Service
-- description:         
homepage:            http://github.com/CBMM/CBaaS
license:             BSD3
license-file:        LICENSE
author:              Greg Hale
maintainer:          imalsogreg@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

library
  build-depends:       base >=4.8 && <4.10
                     , aeson >= 0.9 && < 1.1
                     , async
                     , base64-bytestring
                     , bytestring >=0.10 && <0.11
                     , containers >=0.5 && <0.6
                     , deepseq >=1.4 && <1.5
                     , free >= 4.12 && < 4.13
                     , generics-sop >= 0.2 && < 0.3
                     , http-api-data >= 0.3 && < 0.4
                     , JuicyPixels >= 3.2.7 && < 3.8
                     , lens >= 4.8 && < 4.15
                     , parsec >= 3.1.11 && < 3.2
                     , servant >= 0.7 && < 0.9
                     , servant-docs >= 0.5 && < 0.9
                     , servant-js >= 0.5 && < 0.9
                     , mtl >= 2.2.1 && < 2.3
                     , pretty
                     , stm
                     , transformers >=0.4 && <0.6
                     , transformers-base
                     , text >=1.2 && < 1.3
                     , time >=1.5 && <1.7
                     , unagi-chan
                     , unix >=2.7 && <2.8
                     , unordered-containers >= 0.2.5.1 && < 0.3
                     , uri-bytestring
                     , uuid-types
                     , vector
  if !impl(ghcjs)
    build-depends:
                     groundhog >= 0.7.0.3 && < 0.9
                     ,  groundhog-th
  if impl(ghcjs)
    build-depends:
                     groundhog-ghcjs

  hs-source-dirs:      src
  exposed-modules:     API
                       APIDocs
                       BrowserProfile
                       ClientGen.JS
                       ClientGen.Matlab
                       EntityID
                       Eval
                       Job
                       Message
                       Model
                       Parse
                       Permissions
                       Pretty
                       RemoteFunction
                       Semantics
                       Tag
                       Type
                       TypeCheck
                       User
                       Utils
                       WorkerProfile
  build-tools:         hsc2hs
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options: -Wall -threaded
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: base == 4.*, 
                 aeson,
                 cbaas-lib,
                 generics-sop,
                 hspec >= 2.2 && < 2.3, 
                 JuicyPixels,
                 QuickCheck >= 2.8 && < 2.9,
                 text,
                 unordered-containers,
                 vector
